@@ -6,6 +6,7 @@ import com.example.demo.service.BundleRuleService;
 import org.springframework.stereotype.Service;
 
 import java.util.List;
+import java.util.stream.Collectors;
 
 @Service
 public class BundleRuleServiceImpl implements BundleRuleService {
@@ -16,31 +17,29 @@ public BundleRuleServiceImpl(BundleRuleRepository bundleRuleRepository) {
 }
 
 @Override
-public BundleRule create(BundleRule rule) {
-
-    if (rule.getDiscountPercentage() < 0 || rule.getDiscountPercentage() > 100) {
-        throw new IllegalArgumentException("Invalid discount");
+public BundleRule createRule(BundleRule rule) {
+    if (rule.getDiscountPercentage() < 1 || rule.getDiscountPercentage() > 100) {
+        throw new IllegalArgumentException("Invalid discount percentage");
     }
-
-    if (rule.getRequiredProductIds() == null || rule.getRequiredProductIds().trim().isEmpty()) {
+    if (rule.getRequiredProductIds() == null || rule.getRequiredProductIds().isBlank()) {
         throw new IllegalArgumentException("Required products cannot be empty");
     }
-
     rule.setActive(true);
     return bundleRuleRepository.save(rule);
 }
 
 @Override
-public void deactivateRule(Long id) {
-    BundleRule rule = bundleRuleRepository.findById(id).orElse(null);
-    if (rule != null) {
-        rule.setActive(false);
-        bundleRuleRepository.save(rule);
-    }
+public void deactivateRule(Long ruleId) {
+    BundleRule rule = bundleRuleRepository.findById(ruleId).orElseThrow();
+    rule.setActive(false);
+    bundleRuleRepository.save(rule);
 }
 
 @Override
-public List<BundleRule> getAll() {
-    return bundleRuleRepository.findAll();
+public List<BundleRule> getActiveRules() {
+    return bundleRuleRepository.findAll()
+            .stream()
+            .filter(BundleRule::getActive)
+            .collect(Collectors.toList());
 }
 }
